# nvim

./: .gitignore  CLAUDE.md  README.md  chroma_config.yaml  coc-settings.json  docker-compose.yaml  gruvbox-custom.itermcolors  init.lua  init.vim  install_deps.sh  lazy-lock.json  mappings.vim  plugins.vim  pyproject.toml  requirements.txt  settings.vim  theme.vim  vectorcode_config.json
.vectorcode/: config.json
general/: encryption.vim  mappings.vim  markdown.vim  plugins.vim  settings.vim
lua/: autocmds.lua  keymaps.lua  lazy-plugins.lua  options.lua  plugins.lua  tabline.lua  tmp.lua
lua/config/: autocmds.lua  keymaps.lua  lazy.lua  options.lua  plugins.lua
lua/hydra/: jupyter.lua
lua/plugins/: alpha.lua  avante.lua  betterescape.lua  blink-cmp.lua  bufferline.lua  cmp.lua  colorizer.lua  (+56 more)
plug-config/: 20201208-2008.md  coc.vim  codi.vim  ctrlp.vim  easymotion.vim  fzf.vim  goyo.vim  gpg.vim  polyglot.vim  smoothie.vim  snippets.vim  start-screen.vim  vim-commentary.vim  vim-wiki.vim  vimwiki.vim  which-key.vim
plugins/: coc.vim  codi.vim  copilot.vim  crypt.vim  ctrl-p.vim  easymotion.vim  far.vim  floaterm.vim  fzf.vim  git-messenger.vim  gitgutter.vim  goyo.vim  image.lua  jupytext.lua  magma.vim  markdown-highlighting.vim  molten.vim  quarto.lua  ranger.vim  remote-containers.vim  startify.vim  vim-commentary.vim  vim-rooter.vim  which-key.vim  wiki.vim  window-swap.vim  xtabline.vim
scripts/: coc-settings-template.json  init.vim  install.sh
skeletons/: jupyter.sk
snips/: python.snippets
themes/: airline.vim  gruvbox.vim
utils/: install.sh
(+12 files in other folders)
